--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         </activity>
         <activity
             android:name=".ui.activity.AddAlarm"
+            android:windowSoftInputMode="adjustPan"
             android:label="Добавить будильник">
         </activity>
         <activity
