--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "27.0.3"
     defaultConfig {
         applicationId "cav.antidream"
-        minSdkVersion 14
+        minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.github.clans:fab:1.6.4'
     testCompile 'junit:junit:4.12'
+    compile 'com.ebanx:swipe-button:0.7.0'
 }
