--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.MainActivity">
+        <activity android:name=".ui.MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -20,6 +21,7 @@
         </activity>
         <activity
             android:name=".ui.activity.AddAlarm"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan"
             android:label="Добавить будильник">
         </activity>
